# whisper-timestamped

./: .gitignore  README.md  parse_video_filename.py  pho_launch_live_transcription.py  post_annotate.ipynb  process_recordings.py  pyproject.toml  transcript_to_lsl.py  whisper-timestamped.code-workspace
.github/workflows/: docker-image.yml
openspec/: project.md
scripts/: build_exe.py  process_recordings.py  sim_rt_loop_smoke.py  test_live_whisper_app.py  transcript_to_lsl.py  verify_setup.py
scripts/examples/: example_usage.py  test_RealtimeSTT_live_transcription.py
templating/: pyproject_template_dev.toml_fragment  pyproject_template_release.toml_fragment
whisper_timestamped/: live.py  pho_launch_live_transcription.py  watcher.py
whisper_timestamped/mixins/: live_whisper_transcription.py
